--- a/latte_core/build.gradle
+++ b/latte_core/build.gradle
@@ -13,6 +13,8 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
+        javaCompileOptions { annotationProcessorOptions { includeCompileClasspath = true } }
+
     }
 
     buildTypes {
@@ -20,6 +22,11 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
 }
@@ -32,4 +39,45 @@ dependencies {
     api 'androidx.test:runner:1.2.0'
     api 'androidx.test.espresso:espresso-core:3.2.0'
     api project(path: ':latte_annotations')
+
+
+    //Fragment依赖
+    // appcompat-v7包是必须的
+    api 'me.yokeyword:fragmentationx:1.0.1'
+    //字体图标
+    api 'com.joanzapata.iconify:android-iconify-ionicons:2.2.2'
+    api 'com.joanzapata.iconify:android-iconify-fontawesome:2.2.2'
+    //网络请求依赖
+    api 'com.squareup.okio:okio:1.14.0'
+    api 'com.squareup.okhttp3:okhttp:3.10.0'
+    api 'com.squareup.retrofit2:retrofit:2.4.0'
+    api 'com.squareup.retrofit2:converter-scalars:2.3.0'
+    //Loader依赖
+    api 'com.wang.avi:library:2.1.3'
+    //JSON依赖Android版
+    //noinspection GradleDependency
+    api 'com.alibaba:fastjson:1.1.67.android'
+    //Log
+    api 'com.orhanobut:logger:2.2.0'
+    //微信依赖（包含统计）
+    api 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:5.1.4'
+    //沉浸式状态栏
+    api 'com.github.niorgai:StatusBarCompat:2.1.4'
+    //Google AutoValue
+    compileOnly 'com.google.auto.value:auto-value:1.6'
+    annotationProcessor 'com.google.auto.value:auto-value:1.6'
+    //工具包
+    api 'com.blankj:utilcode:1.14.4'
+    //动态权限处理
+    api 'com.github.hotchemi:permissionsdispatcher:3.0.1'
+    annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:3.0.1'
+    //图片剪裁
+    //noinspection GradleDependency
+    api 'com.github.yalantis:ucrop:2.2.2-native'
+    //二维码扫描
+    api 'me.dm7.barcodescanner:zbar:1.9.8'
+    //RxJava
+    api 'io.reactivex.rxjava2:rxjava:2.1.13'
+    api 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    api 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
 }
